kubernetes/deployments.yaml
# https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/
apiVersion: apps/v1
kind: Deployment
metadata: # ObjectMeta
  name: tdd-detroid
  labels:
    app: tdd-detroid
spec: # DeploymentSpec
  selector: # LabelSelector
    # matchExpressions:
    #   - {key: "app", operator: In, values: ["tdd-detroid"]}
    matchLabels:
      app: tdd-detroid
  template: # PodTemplateSpec
    metadata: # ObjectMeta
      name: tdd-detroid
      labels:
        app: tdd-detroid
    spec: # PodSpec
      containers: # Containers
        - name: tdd-detroid
          image: douglasdcm/tdd-detroid
        - name: tdd-postgrest
          image: douglasdcm/tdd-postgrest
          ports:
            - containerPort: 3000
        - name: postgres
          image: postgres # Docker image
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432 # Exposing the container port 5432 for PostgreSQL client connections.
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
